# B-like-Compiler

./: .gitignore  AST.h  CMakeLists.txt  Makefile  Parser.cpp  Parser.h  README.md  Scanner.h  Token.h  main.cpp
src/: AST.cpp  AST.h  CMakeLists.txt  Makefile  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Symbols.h  Token.h  main.cpp
src/AssemblyPrinter/: ASMPrinter.cpp  ASMPrinter.h  CMakeLists.txt  Instructions.cpp  Instructions.h
src/IRGenerator/: CFG.cpp  CFG.h  CMakeLists.txt  SSAGeneration.cpp  SSAGeneration.h  ValueTracker.cpp  ValueTracker.h
src/InstructionSelector/: CMakeLists.txt  InstructionSelector.cpp  InstructionSelector.h
src/Optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
src/Parser/: AST.cpp  AST.h  Makefile  Parser.cpp  Parser.h  Scanner.cpp  Symbols.h  Token.h  main.cpp
src/RegisterAllocator/: CMakeLists.txt  RegisterAllocator.cpp  RegisterAllocator.h
tests/: CFGTests.cpp  CMakeLists.txt  IRGenTests.cpp  LexerTests.cpp  ParserTests.cpp
